--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apicache": "^1.6.2",
     "base64-arraybuffer": "^0.2.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
