--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "apicache": "^1.6.2",
     "base64-arraybuffer": "^0.2.0",
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.6.0"
   },
   "devDependencies": {
