--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "apicache": "^1.6.2",
     "base64-arraybuffer": "^0.2.0",
+    "cheerio": "^1.0.0",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
